<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="10pt"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:layout_weight="2"
            android:width="40dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_weight="1"
            android:width="20dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell"
            android:layout_weight="1"
            android:width="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutEur"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:id="@+id/eur_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eur"
            android:layout_weight="2"
            android:width="40dp"/>

        <TextView
            android:id="@+id/eur_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

        <TextView
            android:id="@+id/eur_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutUsd"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:id="@+id/usd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usd"
            android:layout_weight="2"
            android:width="40dp"/>

        <TextView
            android:id="@+id/usd_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

        <TextView
            android:id="@+id/usd_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutRub"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:id="@+id/rub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rub"
            android:layout_weight="2"
            android:width="40dp"/>

        <TextView
            android:id="@+id/rub_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

        <TextView
            android:id="@+id/rub_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutUah"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:id="@+id/uah_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uah"
            android:layout_weight="2"
            android:width="40dp"/>

        <TextView
            android:id="@+id/uah_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

        <TextView
            android:id="@+id/uah_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutRon"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:id="@+id/ron_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ron"
            android:layout_weight="2"
            android:width="40dp"/>

        <TextView
            android:id="@+id/ron_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

        <TextView
            android:id="@+id/ron_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="20dp"/>

    </LinearLayout>

</LinearLayout>
